--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
+    "node-pre-gyp": "^0.15.0",
     "sqlite3": "^5.0.0"
   }
 }
